[metadata]
name = wavemeter_evaluation
author = kricki (euphiment@gmx.de)
summary = Tools to evaluate measurement data from HighFinesse Wavemeter
description-file =
    README.md
description-content-type = text/markdown
home-page = https://github.com/kricki/phytools
requires-python = >=3.6.0
classifier =
    Development Status :: 4 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering

[files]
packages =
    wavemeter_evaluation